update scheduler using timer plus a bit of cleanup

--- a/PowerTradePositions/appsettings.json
+++ b/PowerTradePositions/appsettings.json
@@ -1,5 +1,5 @@
 {
     "FolderPath": "C:/CSV_DATA/",
-    "FetchIntervalSeconds": 3600, //every hour
-    "RetryIntervalSeconds": 15 //retry every 15 seconds
+    "FetchIntervalSeconds": 36, //every 36 seconds
+    "RetryIntervalSeconds": 10 //retry every 10 seconds
 }
